--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "benz-amr-recorder": "^1.0.9",
     "enzyme-adapter-react-16": "^1.6",
     "prop-types": "^15.6.2",
+    "identity-obj-proxy": "^3.0.0",
     "antd": "^3.1.3",
     "axios": "^0.18.0",
     "babel-polyfill": "~6.26.0",
