--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,10 @@ jobs:
       - *attach_workspace
       - run: npm run test
 
+orbs:
+  codecov: codecov/codecov@1.0.4
 
+  
 workflows:
   version: 2
   build_test:
